<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/km_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:ems="10"
            android:inputType="number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/km_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Jarak_km"
                android:ems="10"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonhm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/hm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/km_hint" />

        <Button
            android:id="@+id/buttondam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/dam"
            app:layout_constraintEnd_toStartOf="@+id/buttonm"
            app:layout_constraintStart_toEndOf="@+id/buttonhm"
            app:layout_constraintTop_toBottomOf="@+id/km_hint" />

        <Button
            android:id="@+id/buttonm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/km_hint" />

        <Button
            android:id="@+id/buttondm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/dm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonhm" />

        <Button
            android:id="@+id/buttoncm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/cm"
            app:layout_constraintEnd_toStartOf="@+id/buttonmm"
            app:layout_constraintStart_toEndOf="@+id/buttondm"
            app:layout_constraintTop_toBottomOf="@+id/buttondam" />

        <Button
            android:id="@+id/buttonmm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/mm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonm" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttoncm"/>

        <TextView
            android:id="@+id/hasilTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Hasil:" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>